<project>
  <modelVersion>4.0.0</modelVersion>

  <parent>
        <groupId>com.epam.jmp.tabayeu</groupId>
        <artifactId>jmp-parent</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>
  
  <groupId>com.epam.jmp.tabayeu</groupId>
  <artifactId>jmp-code-quality</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <name>jmp-code-quality</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>  <!-- Allows reusing of existing jacoco's report files -->
	<sonar.java.codeCoveragePlugin>jacoco</sonar.java.codeCoveragePlugin>
	<sonar.surefire.reportsPath>/target/surefire-reports</sonar.surefire.reportsPath>
	<sonar.jacoco.reportPath>target/jacoco.exec</sonar.jacoco.reportPath>    <!-- Path of Jacoco's report file for unit tests -->
	<sonar.jacoco.itReportPath>D:/tools-vehicle-sales-transactions/target/jacoco-it.exec</sonar.jacoco.itReportPath> <!-- Path of Jacoco's report file for integration tests. Change it to appropriate path. -->
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
	    <groupId>javassist</groupId>
	    <artifactId>javassist</artifactId>
	    <version>3.12.0.GA</version>
	</dependency>
	
	<dependency>
	    <groupId>javax.jms</groupId>
	    <artifactId>jms</artifactId>
	    <version>1.1</version>
	</dependency>
	
  </dependencies>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>
      <plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-surefire-plugin</artifactId>
		    <version>2.9</version>
		    <configuration>
		        <argLine>-Xmx100M -XX:MaxPermSize=512k -XX:-UseGCOverheadLimit</argLine>
		    </configuration>
		</plugin>
    <!-- <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-pmd-plugin</artifactId>
            <version>3.6</version>
            <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                            <goal>cpd-check</goal>
                        </goals>
                    </execution>
                </executions>
            <configuration combine.self="append">
               <verbose>false</verbose>
              <linkXref>true</linkXref>
              <sourceEncoding>utf-8</sourceEncoding>
              <minimumTokens>100</minimumTokens>
              <targetJdk>1.7</targetJdk>
                <excludes>
                    <exclude>**/JMSSender.java</exclude>
                </excludes>
            </configuration>
          </plugin> -->
          <!-- <plugin>
		   <groupId>org.apache.maven.plugins</groupId>
		   <artifactId>maven-checkstyle-plugin</artifactId>
		   <version>2.17</version>
		   <executions>
		     <execution>
		       <id>validate</id>
		       <phase>validate</phase>
		       <configuration>
 		         <configLocation>checkstyle.xml</configLocation> 
		         <encoding>UTF-8</encoding>
		         <consoleOutput>true</consoleOutput>
		         <failsOnError>true</failsOnError>
		         <linkXRef>false</linkXRef>
		       </configuration>
		       <goals>
		         <goal>check</goal>
		       </goals>
		     </execution>
		   </executions>
		 </plugin> -->
        <plugin>
	        <groupId>org.codehaus.mojo</groupId>
	        <artifactId>findbugs-maven-plugin</artifactId>
	        <version>3.0.3</version>
	      </plugin>
	      
	      <plugin>
		   <groupId>org.codehaus.mojo</groupId>
		   <artifactId>sonar-maven-plugin</artifactId>
		   <version>2.3</version>
		</plugin>
 
	<plugin>
	    <groupId>org.jacoco</groupId>
	    <artifactId>jacoco-maven-plugin</artifactId>
	    <version>0.6.2.201302030002</version>
	    <executions>
	        <execution>
	    <id>default-prepare-agent</id>
	    <goals>
	        <goal>prepare-agent</goal>
	    </goals>
	</execution>
	        <execution>
	            <id>pre-unit-test</id>
	            <goals>
	                <goal>prepare-agent</goal>
	            </goals>
	        </execution>
	        <execution>
	        <id>default-report</id>
	        <phase>prepare-package</phase>
	        <goals>
	        <goal>report</goal>
	        </goals>
	        </execution>
	        <execution>
	            <id>post-unit-test</id>
	            <phase>test</phase>
	            <goals>
	                <goal>report</goal>
	            </goals>
	        </execution>
	        <execution>
	            <id>pre-integration-test</id>
	            <phase>pre-integration-test</phase>
	            <goals>
	                <goal>prepare-agent</goal>
	            </goals>
	            <configuration>
	                <destFile>D:/JMP/#10-code quality/target/jacoco-it.exec</destFile>
	                <propertyName>argLine</propertyName>
	            </configuration>
	        </execution>
	        <execution>
	            <id>post-integration-test</id>
	            <phase>post-integration-test</phase>
	            <goals>
	                <goal>report</goal>
	            </goals>
	            <configuration>
	                <dataFile>D:/JMP/#10-code quality/target/jacoco-it.exec</dataFile>
	            </configuration>
	        </execution>
	    </executions>
	</plugin>
</plugins>
  </build>
  
</project>
